[[Germaonen]] → [[Germoanen|Germaonen]] (dat is [[Germoanen]])

--- a/Nedersaksische_literetuur_töt_1900.mw
+++ b/Nedersaksische_literetuur_töt_1900.mw
@@ -12,7 +12,7 @@ Mit de opkomst van de Nederlaandse en (Hoog)duutse standerdtalen in de vrogmeder
 ==Oldsaksisch==
 't Oldsaksisch is de oldste op-eschreven veurganger van 't Nedersaksisch, vastelegd maank de 9e en 12e ieuw, toe as 't oavergunk in 't Middelnederduuts. 't Weur deur de [[Saksen (volk)|Saksen]] en [[Angeln]] espreuken in wat now Zuudwest-Denemarken, Noordwest-Duutslaand en Noordoost-Nederlaand bint. An de [[Noordzee]]kust, inclusief de tegenswoordige [[Grunnen (provìnzie)|pervincie Grunning]], praotten ze [[Oldfries]].
 
-'t Oldsaksisch was stark verwant an 't Oldfries, [[Oldengels]], [[Oldwestnederfrankisch]] (beter bekend as [[Oldnederlaands]], veural espreuken in wat now [[Vlaanderen|Vlaandern]] en 't zuden van [[Nederlaand]] bint), [[Oldoostnederfrankisch]] en [[Oldhoogduuts]]. De dialecten van de [[Germaonen]] die tiedens de [[Grote Volksverhuzing]] hen [[Groot-Brittannie|Britannia]] oaversteuken, bint heur al vanof de 5e ieuw ofzunderlijk gaon ontwikkeln en wördt daorumme seins niet bi'j 't Oldsaksisch edaone.
+'t Oldsaksisch was stark verwant an 't Oldfries, [[Oldengels]], [[Oldwestnederfrankisch]] (beter bekend as [[Oldnederlaands]], veural espreuken in wat now [[Vlaanderen|Vlaandern]] en 't zuden van [[Nederlaand]] bint), [[Oldoostnederfrankisch]] en [[Oldhoogduuts]]. De dialecten van de [[Germoanen|Germaonen]] die tiedens de [[Grote Volksverhuzing]] hen [[Groot-Brittannie|Britannia]] oaversteuken, bint heur al vanof de 5e ieuw ofzunderlijk gaon ontwikkeln en wördt daorumme seins niet bi'j 't Oldsaksisch edaone.
 
 ===Schrieveri'je: de ''Heliand'' en de ''Genesis''===
 D'r bint niet veule Oldsaksische teksten bewaord ebleven: veural bint d'r nog deupgeloften die de Saksen mussen ofleggen van [[Karel de Grote]]. Wat of d'r eschreven weur, kwaamp miestentied uut de penne van niet-Saksen zoas de [[Fraanken]], die 't Saksisch waorschienlijk mar beparkt machtig waren. De ienige literaire tekst die haoste volledig bewaord is ebleven, is de ''[[Heliand]]'' ('Heilaand'), een episch gedicht uut um-en-bi'j 825, waorvan ze mient det de Fraankische keizer [[Lodewiek de Vrome]] 't hef laoten schrieven um de toe kortsleden mit geweld bekeerde Saksen 't [[christendom|christelijke geleuf]] bi'j te brengen. 't Gedicht giet oaver 't leven van [[Jezus Christus]], en is veerdig eschreven in de stiel van de allitererende Germaonse heldensagen. Um an te sluten bi'j de belevingswereld van de Saksen is Christus minder as een godsdienstlerer en meer as de heerser oaver zien keuninkriek op eerde of-eschilderd. Lichtkaans van dezölfde schriever is 't in fragmenten bewaord ebleven gedicht ''[[Genesis (gedicht)|Genesis]]''.
