bot derbie: [[az:Adi dağtərxunu]]

--- a/Boerenwurmkruud.mw
+++ b/Boerenwurmkruud.mw
@@ -62,6 +62,7 @@ Volgens de [[Griekenlaand|Griekse]] [[mythe]] wönnen 't kruud gebruuk um [[Gany
 [[Kattegerie:West-Veluws artikel]]
 [[Kattegerie:Plaante]]
 
+[[az:Adi dağtərxunu]]
 [[bg:Вратига]]
 [[br:Gwaz (plant)]]
 [[ca:Tanarida]]
