--- a/Maurits_ziene_Tien_Joaren.mw
+++ b/Maurits_ziene_Tien_Joaren.mw
@@ -34,7 +34,7 @@ Beide parti-jen raakten uut-eput, en doar wödden underhändelingen an-evangen u
 {{DEFAULTSORT:Maurits Tien Joaren}}
 
 [[Kattegerie:Achterhooks artikel]]
-[[Kattegerie:Geschiedenis]]
+[[Kattegerie:Geschiedenis van Nederlaand]]
 [[Kattegerie:Tachtigjoarigen Oorlog]]
 
 [[nl:Tien jaren (Tachtigjarige Oorlog)]]
