--- a/Geskiedenis_van_Gelderlaand.mw
+++ b/Geskiedenis_van_Gelderlaand.mw
@@ -61,7 +61,6 @@ De Provinsiale Stoaten bestuurt de previnsie vanuut et [[Previnsiehuus]] in [[Ar
 Oaver de geskiednis van de previnsie Gelderlaand in den [[Tweede Wereldoorlog|Tweeden wealdoorlog]] is veul te vertellen, moar et meest indrökwekkende is wal den [[Slag um Arnhem]].
 
 [[Kattegerie:Achterhooks_artikel]]
-[[Kattegerie:Geschiedenis]]
-[[Kattegerie:Gelderlaand]]
+[[Kattegerie:Geschiedenis van Gelderlaand]]
 
 [[nl:Geschiedenis van Gelderland]]
