--- a/Voestbiele.mw
+++ b/Voestbiele.mw
@@ -8,7 +8,7 @@ In [[1939]] vond den Freesen annemmer en amateur-archeoloog [[Hein van der Vliet
 
 [[Kattegerie:Achterhooks_artikel]]
 [[Kattegerie:Raaive]]
-[[Kattegerie:Geschiedenis]]
+[[Kattegerie:Prehistorie]]
 
 [[ca:Bifaç]]
 [[cs:Pěstní klín]]
