--- a/Zeuventien_Previnsien.mw
+++ b/Zeuventien_Previnsien.mw
@@ -29,7 +29,7 @@ De hierboaven gevolgde riege hef gin vaststoanden inhold. Zeuventiene was op ne 
 * [http://www.wazamar.org/Nederlanden/zeventien-prov.htm De 17 stoaten anweazig bi-j de Stoaten-Generoal van 15 oktober 1555] (mit kaarte)
 
 [[Kattegerie:Achterhooks_artikel]]
-[[Kattegerie:Geschiedenis]]
+[[Kattegerie:Middeleewn]]
 
 [[ca:Disset Províncies]]
 [[de:Siebzehn Provinzen]]
