--- a/Geschiedenis.mw
+++ b/Geschiedenis.mw
@@ -30,7 +30,7 @@ Geschiedenis wodt baseerd op een grote diversiteit an bronnen, inklusief schreve
 * [[De klassieken]]
 
 [[Kattegerie:Stellingwarfs artikel]]
-[[Kattegerie:Geschiedenis]]
+[[Kattegerie:Geschiedenis| ]]
 
 [[nds:Historie]]
 [[af:Geskiedenis]]
