--- a/Allemannen_(volk).mw
+++ b/Allemannen_(volk).mw
@@ -8,9 +8,9 @@ Eure name leaft wieter in de namen veur de dialecten van t [[Zwitsers Duuts]] en
 
 {{Germoanen}}
 
-[[Kattegerie:Geschiedenis]]
-[[Kattegerie:Germoans vôlk]]
 [[Kattegerie:Achterhooks_artikel]]
+[[Kattegerie:Germoans vôlk]]
+[[Kattegerie:Oldheid]]
 
 [[af:Alemanne]]
 [[als:Alemannen]]
