--- a/Sjatten_(volk).mw
+++ b/Sjatten_(volk).mw
@@ -16,7 +16,7 @@ In [[162]] en [[170]] kwamen de Sjatten nog éenmoal keer as [[agressor]]s in de
 
 [[Kattegerie:Achterhooks artikel]]
 [[Kattegerie:Germoans vôlk]]
-[[Kattegerie:Geschiedenis]]
+[[Kattegerie:Oldheid]]
 
 [[ar:خاتيون]]
 [[ca:Cats (Germània)]]
