--- a/Tubaantn.mw
+++ b/Tubaantn.mw
@@ -33,9 +33,8 @@ Den Mars of Mars Thincsus den at hier eneumd wörd, wörd meestieds in eenn oadm
 {{Germoanen}}
 
 [[Kattegerie: Tweants artikel]]
-[[Kattegerie: Geschiedenis]]
 [[Kattegerie: Germoans vôlk]]
-
+[[Kattegerie: Oldheid]]
 
 [[ca:Tubants]]
 [[de:Tubanten]]
