--- a/Angelen.mw
+++ b/Angelen.mw
@@ -4,9 +4,9 @@ Den name ''[[Engelaand]]'' is noar dit volk eneumd, en ok rechtstreakse of ofgel
 
 {{Germoanen}}
 
-[[Kattegerie:Geschiedenis]]
-[[Kattegerie:Germoans vôlk]]
 [[Kattegerie:Achterhooks_artikel]]
+[[Kattegerie:Germoans vôlk]]
+[[Kattegerie:Oldheid]]
 
 [[bg:Англи]]
 [[br:Angled]]
