--- a/Bructeren.mw
+++ b/Bructeren.mw
@@ -20,6 +20,7 @@ Nen leagereenheid van de Bructeri in Romeinsen deenst wödt beskreaven in den [[
 {{Germoanen}}
 [[Kattegerie:Achterhooks_artikel]]
 [[Kattegerie:Germoans vôlk]]
+[[Kattegerie:Oldheid]]
 
 [[bg:Бруктери]]
 [[ca:Brúcters]]
