--- a/Franken.mw
+++ b/Franken.mw
@@ -4,7 +4,7 @@ De '''Franken''' waren n [[Germoanen|Germaans]] volk dat, veur zowiet bekend is,
 {{Germoanen}}
 [[Kattegerie:Achterhooks_artikel]]
 [[Kattegerie:Germoans vôlk]]
-[[Kattegerie:Geschiedenis]]
+[[Kattegerie:Oldheid]]
 
 [[af:Franke]]
 [[als:Franken (Volk)]]
