--- a/Sjouken.mw
+++ b/Sjouken.mw
@@ -17,9 +17,9 @@ Man leuft dus dat zai zok ook tot over Ems tou vestegd haren, ien de noudoagse p
 
 {{Germoanen}}
 
-[[Kattegerie:Geschiedenis]]
-[[Kattegerie:Germoans vôlk]]
 [[Kattegerie:Grunnegs_artikel]]
+[[Kattegerie:Oldheid]]
+[[Kattegerie:Germoans vôlk]]
 
 [[bg:Хавки]]
 [[ca:Caucs]]
