--- a/Ut_quid_iubes_pusiole.mw
+++ b/Ut_quid_iubes_pusiole.mw
@@ -201,7 +201,7 @@ Hier volgt de tekst van 't lied mit een vri'je Drèentse vertaling (epubliceerd 
 
 {{DEFAULTSORT:Ut Quid Iubes Pusiole}}
 [[Kattegerie:Drèents artikel]]
-[[Kattegerie:Geschiedenis]]
+[[Kattegerie:Middeleewn]]
 [[Kattegerie:Literatuur]]
 [[Kattegerie:Christendom]]
 [[Kattegerie:Geleuf]]
