--- a/Willem_van_Oranje.mw
+++ b/Willem_van_Oranje.mw
@@ -14,7 +14,7 @@ Willem van Oranje is uuteindelijk op [[10 juli]] [[1584]] vermoord in zien eigen
 {{DEFAULTSORT:Oranje, Willem Van}}
 
 [[Kattegerie:Oost-Veluws artikel]]
-[[Kattegerie:Geschiedenis]]
+[[Kattegerie:Tachtigjoarigen Oorlog]]
 
 [[ar:وليام الكتوم]]
 [[arz:وليام الصامت]]
