--- a/Gottschalk_van_Orbais.mw
+++ b/Gottschalk_van_Orbais.mw
@@ -56,9 +56,8 @@ Gottschalk was een schaarp denker, mar hi'j wus hum niet te matigen, wat hum dan
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
 [[Kattegerie:Drèents artikel|Orbais, Gottschalk van]]
-[[Kattegerie:Geschiedenis|Orbais, Gottschalk van]]
+[[Kattegerie:Middeleewn|Orbais, Gottschalk van]]
 [[Kattegerie:Christendom|Orbais, Gottschalk van]]
-[[Kattegerie:Geleuf|Orbais, Gottschalk van]]
 [[Kattegerie:Duutslaand|Orbais, Gottschalk van]]
 
 [[de:Gottschalk von Orbais]]
