*Empty MediaWiki Message*

--- a/Ridder.mw
+++ b/Ridder.mw
@@ -28,7 +28,7 @@ In de middeleeuwn en in de [[Republiek der Zeuven Vereanegde Nederlanden|Republi
 
 [[Kattegerie:Achterhooks_artikel]]
 [[Kattegerie:Aodel]]
-[[Kattegerie:Geschiedenis]]
+[[Kattegerie:Middeleewn]]
 
 [[en:Ridder (title)]]
 [[nl:Ridder (titel)]]
