--- a/Zwilbrook.mw
+++ b/Zwilbrook.mw
@@ -1,6 +1,6 @@
 [[Image:Zw ve fla.jpg|thumb|right|200px|Flamingo's in t Zwillbrocker Venn]]
 [[Image:Barokkerk Sint Franciscus Zwilbroek.jpg|thumb|right|200px|De parochiekearke Sankt Franziskus]]
-t '''Zwilbrook''' ([[Nederlaands]]: ''Zwilbroek'', [[Duuts]]: ''Zwillbrock'') is n klean doarp op de greanze tusken de [[Nederlaand]]se gemeante [[Berkellaand]] in [[Gelderlaand]] en de [[Duutslaand|Duutse]] gemeente [[Vreden|Vreedn]] in t distrikt [[Borken (distrikt)|Borken]] in de deelstaat [[Noordrien-Westfaaln]]. t Lig an  de [[Nederlaand]]s-Pruuske greans eankelde kilometers ten oostn van [[Grolle]], teegn t Achterhookse [[Holterhook]] an.
+t '''Zwilbrook''' ([[Nederlaands]]: ''Zwilbroek'', [[Duuts]]: ''Zwillbrock'') is n klean doarp op de greanze tusken de [[Nederlaand]]se gemeante [[Berkellaand]] in [[Gelderlaand]] en de [[Duutslaand|Duutse]] gemeente [[Vrene|Vreedn]] in t distrikt [[Borken (distrikt)|Borken]] in de deelstaat [[Noordrien-Westfaaln]]. t Lig an  de [[Nederlaand]]s-Pruuske greans eankelde kilometers ten oostn van [[Grolle]], teegn t Achterhookse [[Holterhook]] an.
 
 t Zwilbrook is bekeand vanweage t ''Zwillbrocker Venn'' en de parochiekearke ''Sankt Franziskus''. Disse kearke wördn bouwd met t geald van katteliekn oet [[Tweante]] en de [[Achterhook]]. De katteliekn in t oostn van Nederlaand mochn an t eand van de [[17e eeuw]] eer geloof nich langer beliedn. Doarop leut de bisschop van [[Meunster]] de Fransiskaann oet [[Boogholt]] in [[1651]] de kerstmisse leazn in t Zwilbrook, wat oeteindelik leed töt t ontstoan van ne parochie vuur de bedroagde kattelieken in Oost-Nederlaand en de bouw van ne keark vuur disse parochie met angreanznd klooster vuur de Fransiskaann. De hudige ''Sankt Franziskus''-kearke is een van de weinige barokke kearkn in t [[Meunsterlaand]] dee is blievn stoan in n [[Tweedn Weerldoorlog]].
 
