typo (en dan ok "taal" → "toal")

--- a/Castrum.mw
+++ b/Castrum.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Castra1.png|thumb|Castra, '''1''' Praetorium '''2''' Via Praetoria '''3''' Via Principalis '''4''' Porta Principalis Dextra (rechterpoorte) '''5''' Porta Praetoria (heufdpoorte) '''6''' Porta Principalis Sinistra (linkerpoorte) '''7''' Porta Decumana (achtersten poorte)]]
-'''Castra''' ([[Meervold (aoal)|mv]]) of '''castrum''' ([[Enkelvold (taal)|ev]]) was de benoaming veur n [[Romeinse Riek|Romeins]] [[leagerkamp]].
+'''Castra''' ([[Meervold (toal)|mv]]) of '''castrum''' ([[Enkelvold (toal)|ev]]) was de benoaming veur n [[Romeinse Riek|Romeins]] [[leagerkamp]].
 
 == Indealing van et castra ==
 In et ''castra'' sneden den ''via principalis'' en den ''via praetoria'' mekare. Den eersten leep van de ''porta principalis dextra'' noar de ''porta principalis sinistra'' (linkerpoorte), woar den ''carcer'' (karker) was. Den ''via praetoria'', den langs et ''praetorium'' (heufdkwarteer, ofgeleid van [[praetor]]) leep, leep van de ''porta praetoria'' (heufdpoorte) tot de ''porta decumana'' (achtersten poorte). In et midden van et kamp was et ''praetorium'', de tenten van de leagerleiding, de vergoaderplaatse en et ''valetudinarium'' (cf. infra). Doar umhen waarn de ''[[Papilio (legertent)|papiliones]]'' (tenten) van in [[contubernium|contubernia]] op-edealde [[Romeinsen legionair|Romeinse legionairs]] eplaatst.
