{{DEFAULTSORT:Orbais, Gottschalk van}}

--- a/Gottschalk_van_Orbais.mw
+++ b/Gottschalk_van_Orbais.mw
@@ -55,10 +55,10 @@ Gottschalk was een schaarp denker, mar hi'j wus hum niet te matigen, wat hum dan
 
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
-[[Kattegerie:Drèents artikel|Orbais, Gottschalk van]]
-[[Kattegerie:Middeleewn|Orbais, Gottschalk van]]
-[[Kattegerie:Christendom|Orbais, Gottschalk van]]
-[[Kattegerie:Duutslaand|Orbais, Gottschalk van]]
+[[Kattegerie:Drèents artikel]]
+[[Kattegerie:Middeleewn]]
+[[Kattegerie:Christendom]]
+[[Kattegerie:Duutslaand]]
 
 [[de:Gottschalk von Orbais]]
 [[en:Gottschalk of Orbais]]
