+[[cv:Дани патшалăхĕн гимнĕ]]

--- a/Der_er_et_yndigt_land.mw
+++ b/Der_er_et_yndigt_land.mw
@@ -45,6 +45,7 @@
 [[ca:Der er et yndigt land]]
 [[ce:Det er et yndigt land]]
 [[cs:Dánská hymna]]
+[[cv:Дани патшалăхĕн гимнĕ]]
 [[da:Der er et yndigt land]]
 [[de:Der er et yndigt land]]
 [[el:Der er et Yndigt Land]]
