interwiki: +[[fr:Westphalien (langue)]]

--- a/Westfaals.mw
+++ b/Westfaals.mw
@@ -40,6 +40,7 @@
 
 [[de:Westfälische Dialekte]]
 [[en:Westphalian language]]
+[[fr:Westphalien (langue)]]
 [[hr:Vestfalski jezik]]
 [[it:Westfalico]]
 [[nds:Westfäälsch Platt]]
