bot derbie: [[gv:Yn Vretyn Vooar]]

--- a/Groot-Brittannie.mw
+++ b/Groot-Brittannie.mw
@@ -32,6 +32,7 @@ De noam Groot-Brittannie wordt ook verkeerd bruukt as n [[pars pro toto]] veur t
 [[Kattegerie:Verienigd Keuninkriek]]
 [[Kattegerie:Eilaand]]
 
+[[nds:Grootbritannien]]
 [[af:Groot-Brittanje]]
 [[ang:Bryten]]
 [[ar:بريطانيا العظمى]]
@@ -62,6 +63,7 @@ De noam Groot-Brittannie wordt ook verkeerd bruukt as n [[pars pro toto]] veur t
 [[ga:An Bhreatain]]
 [[gd:Breatainn Mhòr]]
 [[gl:Gran Bretaña - Great Britain]]
+[[gv:Yn Vretyn Vooar]]
 [[he:בריטניה הגדולה]]
 [[hr:Velika Britanija (otok)]]
 [[hu:Brit-sziget]]
@@ -84,7 +86,6 @@ De noam Groot-Brittannie wordt ook verkeerd bruukt as n [[pars pro toto]] veur t
 [[mk:Велика Британија (остров)]]
 [[ml:ഗ്രേറ്റ് ബ്രിട്ടൺ]]
 [[mr:ग्रेट ब्रिटन]]
-[[nds:Grootbritannien]]
 [[ne:ग्रेट ब्रिटेन]]
 [[nl:Groot-Brittannië]]
 [[nn:Øya Storbritannia]]
