--- a/Riesn.mw
+++ b/Riesn.mw
@@ -31,11 +31,11 @@ Riesn hef n oaver t algemeen stoark [[gerefformeerd]]e bevölking. Der zeent vö
 Duur t gerefformeerde plichtsgeveul en öare kalvienistiese gedachtn oawer arbeid, steet Riesn op ekonomies vlak laandelik in n top. Völle bleuinde bedriewe oet Riesn zeent van stoark gerefformeerde femilies, zooas Baan, Wessels, en zoo wieder.
 In Riesn besteet n nauw sociaal netwoark dat t oonder mekaar haandel driewn bevordert.
 
-Oet Riesn keump ok de komiek en vrogere pressentator van [[RTV Oost]]  [[Harm oet Riessen]]. Riesn was de geboortestean van de skriewersbreurs [[Belcampo]] en [[Koarel van n Notoaris]]. belcampo beskreef t Riesn van zinne tied in zien umstreedn book ''Het grote Gebeuren''. Koarel is bekeand ewördn van de [[Tweants]]e wöardebeuke en reaizeverhaaln dee't he skreef.
+Oet Riesn keump ok de komiek en vrogere pressentator van [[RTV Oost]]  [[Harm oet Riessen]]. Riesn was de geboortestean van de skriewersbreurs [[Belcampo]] en [[Koarel van n Notoaris]]. Belcampo beskreef t Riesn van zinne tied in zien umstreedn book ''Het grote Gebeuren''. Koarel is bekeand ewördn van de [[Tweants]]e wöardebeuke en reaizeverhaaln dee't he skreef.
 
 
 ==Geskiedenisse==
-De Euldste vermeelding van Riesn is op nen vrachtbreef van n Groaf van Daaln (1188), woerin de ''parrochia Risnen'' eneumd wörd. De [[Skeeldkoarke]], den at toertieds nog Dionysius-koarke heetn, was t middelpeunt van t [[kerspel]] Riesn. <br>
+De Euldste vermeelding van Riesn is op nen vrachtbreef van n Groaf van Daaln (1188), woerin de ''parrochia Risnen'' eneumd wörd. De [[Skeeldkoarke]], den at toertieds nog Dionysius-koarke heetn, was t middelpeunt van t [[karspel|kerspel]] Riesn. <br>
 Riesn kreeg stadsrechtn toew at biskop van [[Utrech]], [[Otto III van Hollaand]], verskel kreeg met zienen [[leenman]], n Groaf van [[Goor]]. Den kreeg te völle macht in zinnen [[burcht|borg]]. Um disse macht in te damn gavn de biskop op [[5 mei]] [[1243]] stadrechtn an Riesn. Det heuld in det Riesn twee [[joarmoarkt]]n mocht hooldn, wat de Riesnse knippe good vuldn, en det Riesn zikzelf verdeadign mocht, wat Riesn dee duur waln en singels an te legn. Verskeaidene stroatnaamns geewt dit nog aait an: ''Hutnwal'', ''Walgoardn'', ''Walstroate''. t Stadsrecht van Riesn is verbeundn met t stadsrecht van [[deaventer|Deawnter]]. Ze treudn beaide too töt de [[Haanze]] roond [[1350]].
 
 Riesn har ook t Hoge Baanke-recht vuur t [[richterambt]] [[Kedingen]] wat töt an de Fraanske tied hef bestoan. Hieroawer wör verskeaidene moaln esteggeld tusken Goor en Riesn um te bepoaln noar wee at det recht zol goan. Riesn beheardn de Riesnse kwarteern: [[Hoge Heksel]], [[Wierdn]], [[Rektum]], [[Iepeloo]], [[Eanter]], [[Nötter]], [[Sunnoa]] en [[Ealsn]]. Riesn har dree [[stadspoortn]]: de Möllepoorte, Ealsenerpoorte en de Hoarpoorte. n Achternaamn ''Poortman'' dut hier nog beskeed van. 's Oawnds deedn ze de klökke luudn um an te geewn det de poortn too gungn. Disse tradisie wörd nog aait leawndig eheuldn. n Ingaank op t zuudn wör slim bewaakt met de Hooltertoorn (rechtevoort nog in n stroatnaam: ''Holtertorensweg'') op n Koerbeeld. Wietere verdeadiging har Riesn neet neudig, want vearder lea t tusken [[Moor|morre-]] en [[venne]]laandn.
