--- a/Maarkel.mw
+++ b/Maarkel.mw
@@ -12,7 +12,7 @@ Op t Westn lig de [[Maarkelsenbarg|Maarkelsenboarg]], den at op n top t Oaweries
 Op ongevear 5 kilometer op t Westn van t doarp steet ne 156 meter hoge tellevisietoorn. Hiervan steet n skaalmodel in [[Madurodam]] in [[n Heeg|n Haag]]. In [[2007]] is-e in ekortt noa at t analoge tellevisiesignaal oet de loch is ehaald.
 
 ==Geskiedenisse==
-In de [[middeleewn]] was Maarkel t heuwd van t [[kerspel|karspel]] Maarkel (koarkgemeante). In [[1224]] wör [[Deepn]] ne gemeante op zikzelf. Vuur n opkomst van t [[protestantisme]], wat in Maarkel duur de adel an t volk wör op edrungn.
+In de [[middeleewn]] was Maarkel t heuwd van t [[karspel]] Maarkel (koarkgemeante). In [[1224]] wör [[Deepn]] ne gemeante op zikzelf. Vuur n opkomst van t [[protestantisme]], wat in Maarkel duur de adel an t volk wör op edrungn.
 
 Tot t midln van t 17e joarhonderd wördn beevoartn noar Maarkel organiseert, terwiel at det verböadn was duur de regerige. In de parochiekoarke van Maarkel hadn ze n woonderreliek van t [[Healige Blood]]. Later stopn de regerige dit duur de kapeln dichte te messeln of of te brekn.
 
