link [[kerspel|]]| → [[karspel|]]| (ok rood, moar meer links)

--- a/Homsterland.mw
+++ b/Homsterland.mw
@@ -10,7 +10,7 @@ Homsterland beheurt tot de oldste [[kultuurlandschop]]pen van West-Uropa. t Word
 
 Om en bie [[800]] noa Kr. was t zulfs een van de dichtstbevôlkte gebieden van Nedderland. t Is bekend dat bieveurbeeld de [[wierde (toponiem)|wierde]] van [[Nijhoof]] al sikkom 2200 joar onôfbroken bewoond wordt. 
 
-Noadat om 800 toe de [[Lauwerszee]] ontstoan was wer Homsterland n waddenailand, mit as heufdplak [[Nijhoof]] dat ien dij tied ook wel ''Suxworth'' ("''Zuudwerd''") nuumd wer. Sikkom 400 joar loater nam t aantel störmvloeden toe, woarnoa der n ringdiek om Homsterland toe legd wer. Hierdeur wer t ailandkarakter van Homsterland nog verstaarkt. t Doemoalege Homsterland beston uut drij [[kerspel|kaarspels]]: Nijhoof, [[Ollehoof]] en [[Soaxum]]. 
+Noadat om 800 toe de [[Lauwerszee]] ontstoan was wer Homsterland n waddenailand, mit as heufdplak [[Nijhoof]] dat ien dij tied ook wel ''Suxworth'' ("''Zuudwerd''") nuumd wer. Sikkom 400 joar loater nam t aantel störmvloeden toe, woarnoa der n ringdiek om Homsterland toe legd wer. Hierdeur wer t ailandkarakter van Homsterland nog verstaarkt. t Doemoalege Homsterland beston uut drij [[karspel|kaarspels]]: Nijhoof, [[Ollehoof]] en [[Soaxum]]. 
 
 Pas van 1500 ôf aan wer t Homsterland deur dieken mit t vasteland verbonden, woarnoa [[Cisterciënzers|Sistersjenserse]] munneks uut [[Aauwerd]] grote parten om t ailand hìn ienpolderden. t Homsterland kwam hierdeur aan t vasteland te liggen zo as t dat nu nog dut. 
 
