link [[kerspel]] → [[karspel|kerspel]] (dat is [[karspel]], ok rood, moar meer links); *t* kerspel, ducht mie

--- a/Dulder.mw
+++ b/Dulder.mw
@@ -2,7 +2,7 @@
  
 '''Dulder''' is ne [[boerskop]] in de gemeente [[Deenkellaand]] in [[Tweante]]. t Ligt op t noorden van [[Hengel (Oaveriessel)|Hengel]]. Töt an de [[gemeentelijke herindeling|gemeentelike herverdelige]] van [[2001]] heurden t bie de gemeente [[Weersel]]. Per [[1 jannewoari]] [[2005]] har de boerskop um de 1060 inwonners.
 
-In de [[middeleewn|middeleewen]] was Dulder ne boermoarke in de [[Kerspel]] [[Oldenzel]], en wör toertieds eskrewen as ''dulre''.
+In de [[middeleewn|middeleewen]] was Dulder ne boermoarke in t [[karspel|kerspel]] [[Oldenzel]], en wör toertieds eskrewen as ''dulre''.
 
 [[Kattegerie:Tweants artikel]]
 [[Kattegerie:Plaatse in Oaveriessel]]
