[[parochie]] → [[karspel]] (ok rood, moar hef meer links); zeet ok http://www2.historischcentrumoverijssel.nl/overijssel/leenrep/repertorium/lenen/1018.htm: "to Magele in den kerspel van den Hamme"

--- a/N_Ham.mw
+++ b/N_Ham.mw
@@ -4,7 +4,7 @@
 Töt an [[1 juli]] [[2001]] heurdn n Ham en [[Vroomshoop]] bie mekoar in de gemeente n Ham. In 2001 wör t bie t [[Vjenne]] in eliefd, mear n joar later in [[2002]] in de gemeente Tweanteraand.
 
 ==Geskiedenisse==
-Al in [[1333]] wör n Ham vuur t eerst (as [[parochie]]) eneumd in ne leenakte van n [[Hear van Egede]].
+Al in [[1333]] wör n Ham vuur t eerst (as [[karspel]]) eneumd in ne leenakte van n [[Hear van Egede]].
 
 t Midln van t oolde [[esdoarp]] is n breenk, met doarnöast t euldste bouwsel: nen in [[Gotiek|gotiesn]] stiel ebouwdn toorn van de [[Nederlaands Hervormde Karke|Hervörmde Koarke]] (tusken ongevear 1325 en 1425 ebouwd). Töt deepe in t 19e joarhonderd deedn de leu oet n Ham vuural boern: völle [[veeboer|vee-]] en [[akkerboer]]n. Töt an ongevear [[1830]] was t in n Ham gin vetpot. Det wör wat better noa de [[industriële revolusie]].
 
