--- a/Drums.mw
+++ b/Drums.mw
@@ -29,6 +29,7 @@ t Geluud van n drumstel wördt vuural bepoald duur de bekkns, snaredrum en bassd
 [[an:Batería (instrumento)]]
 [[ar:درمز]]
 [[ast:Batería (instrumentu musical)]]
+[[bar:Schlogzeig]]
 [[be-x-old:Ударная ўстаноўка]]
 [[bg:Комплект барабани]]
 [[br:Bateri]]
