bot derbie: [[az:Qalstuk]]

--- a/Stropdas.mw
+++ b/Stropdas.mw
@@ -59,6 +59,7 @@ Met al disse knupn, behalve n Dubbeln Windsor, krie-j aait nen skeln knup.
 [[ar:ربطة عنق]]
 [[arz:كرافته]]
 [[ast:Corbata]]
+[[az:Qalstuk]]
 [[bg:Вратовръзка]]
 [[bs:Kravata]]
 [[ca:Corbata]]
