--- a/Grietje_Clewits.mw
+++ b/Grietje_Clewits.mw
@@ -32,10 +32,10 @@ In Roon is een Juff. Clewitsstraat.
 Uut 'd’ Elterbult', in: ''Scheupers van de taol'' (kiekt bi'j de Bronnen)
 
 ==Bronnen==
-* Rouke Broersma (red.) (2003). ''Scheupers van de taol: Bloemlezing van de Drèentse Schrieverij 1837-2003''. Zuudwolde: Het Drentse Boek. Blz. 51.
+* [[Rouke Broersma]] (red.) (2003). ''Scheupers van de taol: Bloemlezing van de Drèentse Schrieverij 1837-2003''. Zuudwolde: Het Drentse Boek. Blz. 51.
 * [http://www.encyclopediedrenthe.nl/Clewits,_Grietje Encyclopedie Drenthe Online]
 * [http://www.historischeverenigingroon.nl/Uitgaven/Tijdschrift/Roon_2004/roon-ts-04-02.htm Historische Vereniging 'Roon']
-* Dr. H. Nijkeuter (red.) (2006). ''De dichter en de wichter. Verzamelde gedichten van Hans Heyting''. Zuudwolde: Stichting Het Drentse Boek. Blz. 99 & 114.
+* Dr. H. Nijkeuter (red.) (2006). ''De dichter en de wichter. Verzamelde gedichten van Hans Heyting''. Zuudwolde: [[Stichting Het Drentse Boek]]. Blz. 99 & 114.
 
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
