--- a/Boertanger_Moor.mw
+++ b/Boertanger_Moor.mw
@@ -28,7 +28,7 @@ In de neengtiende ieuw kreeg törf as braandstof concurrentie van [[stienkool]].
 Naodet 't [[Amsterdamse veld]] was of-egreuven, kwaamp de vervening in 't Nederlaanse diel van 't Boertanger Moor töt 'n ende. Dit leste verveende gebied heurt now bi'j 't netuurgebied 't [[Bargerveen]]. In 't Duutse diel van 't Moor hej an 't begun van de [[21e eeuw|ienentwintigste ieuw]] nog vervenings.
 
 ==Bron==
-*Henk van den Brink (red.) (1999). ''Van Rottum tot Reest, Natuurgebieden in Groningen en Drenthe''. Assen: Staatsbosbeheer. ISBN 909013283X. Veural de bladzieden 271-83.
+*Henk van den Brink (red.) (1999). ''Van Rottum tot Reest, Natuurgebieden in Groningen en Drenthe''. [[Assen]]: Staatsbosbeheer. ISBN 909013283X. Veural de bladzieden 271-83.
 
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
