[[Scharpenzeel]] → [[Scharpenzeel (Frieslaand)|Scharpenzeel]] (dat is [[Scharpenzeel (Frieslaand)]])

--- a/Westhoekers.mw
+++ b/Westhoekers.mw
@@ -1,4 +1,4 @@
-Et '''Westhoekers''' is de naeme veur een dialect van et [[Stellingwarfs]] dat ze praoten in de zuudwestpunt van de gemiente [[Weststellingwarf]], in 't zuudoosten van [[Frieslaand]]. De plakken waor ze Westhoekers praoten bin [[Spange]], [[Sliekenborg]], [[Scharpenzeel]] en [[De Langelille]].
+Et '''Westhoekers''' is de naeme veur een dialect van et [[Stellingwarfs]] dat ze praoten in de zuudwestpunt van de gemiente [[Weststellingwarf]], in 't zuudoosten van [[Frieslaand]]. De plakken waor ze Westhoekers praoten bin [[Spange]], [[Sliekenborg]], [[Scharpenzeel (Frieslaand)|Scharpenzeel]] en [[De Langelille]].
 
 Disse vorm van et Stellingwarfs liekt nog aorig veul op de dialekten van de [[Oaveriessel|Overiesselse]] plakken [[De Kuunder]] en [[Blankenham]], die niet veerof liggen. Bi'jtieden numen ze in [[Stellingwarf]] 't dialekt van disse Overiesselse plakken ok Westhoekers.
 
