[[Diesel]]| → [[Diesel (tiedschrift)]]|; kiekt "'t Is enuumd noar [[Diesel (plant)|de plaante]], in naovolging van" even noa, a-j wilt

--- a/Nedersaksische_tiedschriften.mw
+++ b/Nedersaksische_tiedschriften.mw
@@ -48,7 +48,7 @@ Sunds [[1907]] gef de [[Platduuts|Platduutse]] veriening Quickborn een tiedschri
 
 In 1915 begunden [[Paul Wriede]] 't tweijaorlijkse tiedschrift ''Plattdüütsch Land un Waterkant'', det oorsprunkelijk uutkwaamp veur de saldaoten in de [[Eerste Wereldoorlog]]. In de jaoren tachtig kreeg 't de ondertitel ''Blatt for plattdüütsche Literatuur von vondaag'' en wördden 't een belangriek medium veur ni'je Platduutse literetuur. In 1993 gunk 't blad mit ''Quickborn'' in de maande wieder.<ref>[http://www.quickborn-vereinigung.de/zs-einleitung.php Webstee van 't tiedschrift ''Quickborn'']</ref>
 
-Vanof 1992 verschient in de regio [[Oostfrieslaand]] vördeljaors ''[[Diesel|Diesel (dat oostfreeske Bladdje)]]'', veur literetuur, schrieveri'je en dieverdaotsie. ''Diesel'' (distel) is op-ezet in naovolging van 't Grunningse ''Krödde'' en 't Drèentse ''Roet''.
+Vanof 1992 verschient in de regio [[Oostfrieslaand]] vördeljaors ''[[Diesel (tiedschrift)|Diesel (dat oostfreeske Bladdje)]]'', veur literetuur, schrieveri'je en dieverdaotsie. 't Is enuumd noar [[Diesel (plant)|de plaante]], in naovolging van 't Grunningse ''Krödde'' en 't Drèentse ''Roet''.
 
 == Rifferenties ==
 <references />
