/* De Pennevogel */ [[Gellemuun]] → [[Gällemuun|Gellemuun]] (dat is [[Gällemuun]])

--- a/Nedersaksische_tiedschriften.mw
+++ b/Nedersaksische_tiedschriften.mw
@@ -41,7 +41,7 @@ Deur slimme ziekte van Ten Holt mus 't tiedschrift nao zes ofleverings uutscheid
 In 1965 perbeerden twei veurmaolige mitwarkers van '' 't Swieniegeltje'', [[Hendrik Entjes]] uut [[Oaveriessel]] en [[Simon van Wattum]] uut Grunning, vanni'js een grèensoaverschriedend literair en cultureel tiedschrift te maken. 't Kreeg de titel ''[[Weerwoord (tiedschrift)|Weerwoord]]''. Mit de [[Graofschop Benthem|Benthemer]] taalkundige [[Arnold Rakers]] was erisselveerd oaver 't opzetten van 't blad, mar Rakers kwaamp uut de tied nog veur 't verskienen van 't eerste nommer. Vanof 't tweide nommer zat Stephan Selhorst uut Raesfeld, Westfaolen in de redactie. Nao 't darde nommer scheidden ''Weerwoord'' d'r mit uut.<ref>Hendrik Entjes (2008), 'Nedersaksische letterkunde onderweg'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref><ref>Fokko Veldman en Hanny Diemer (2008), 'De literatuur van Groningen'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref>
 
 ===De Pennevogel===
-Ok 't tiedschrift ''[[De Pennevogel]]'', op-ezet in 1974, zöcht ansluting bi'j 't ideaal van '' 't Swieniegeltje'' umme een stee te bieden an literaire schrieveri'je in Nedersaksische dialecten in Nederlaand en Duutslaand. De redacteurs waren [[Ton Kolkman]] uut [[Twente]], [[Jannie Bakker-Rietman]] uut [[Gellemuun]] en [[Henk Bloemhoff]] uut [[Stellingwarf]]. 't Uutbrengen van ''De Pennevogel'' verleup muizem; d'r was gebrek an belangstelling veur. 't Leste, zeuvende nommer, een dubbelnommer, kwaamp end 1979 uut.<ref>Fokko Veldman (1990), 'Naoorlogse dialectliteratuur in Groningen'. In Jurjen van der Kooi (red.), ''Dialectliteratuur: balans en perspectief van de moderne streektaalletterkunde in Oostnederland en Nederduitsland: een bundel studies''. Grunning: Sasland</ref><ref>Henk Bloemhoff en Pieter Jonker (2008), 'Stellingwerver literatuur'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref>
+Ok 't tiedschrift ''[[De Pennevogel]]'', op-ezet in 1974, zöcht ansluting bi'j 't ideaal van '' 't Swieniegeltje'' umme een stee te bieden an literaire schrieveri'je in Nedersaksische dialecten in Nederlaand en Duutslaand. De redacteurs waren [[Ton Kolkman]] uut [[Twente]], [[Jannie Bakker-Rietman]] uut [[Gällemuun|Gellemuun]] en [[Henk Bloemhoff]] uut [[Stellingwarf]]. 't Uutbrengen van ''De Pennevogel'' verleup muizem; d'r was gebrek an belangstelling veur. 't Leste, zeuvende nommer, een dubbelnommer, kwaamp end 1979 uut.<ref>Fokko Veldman (1990), 'Naoorlogse dialectliteratuur in Groningen'. In Jurjen van der Kooi (red.), ''Dialectliteratuur: balans en perspectief van de moderne streektaalletterkunde in Oostnederland en Nederduitsland: een bundel studies''. Grunning: Sasland</ref><ref>Henk Bloemhoff en Pieter Jonker (2008), 'Stellingwerver literatuur'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref>
 
 ==Platduuts==
 Sunds [[1907]] gef de [[Platduuts|Platduutse]] veriening Quickborn een tiedschrift uut, sunds 1968 onder de name ''[[Quickborn (tiedschrift)|Quickborn: Zeitschritt für plattdeutsche Sprache und Dichtung]]''. In 't vördeljaors verschienende tiedschrift viej verhandelingen, besprèkings, berichten en ni'jgies.
