--- a/Wierdn.mw
+++ b/Wierdn.mw
@@ -1,32 +1,30 @@
-{{Gemeante |
-bestaandsnaam vlagge = VlaggeWierdn.gif |
-bestaandsnaam woapn = WoapnWierdn.gif |
-naam = Wierden |
-lokatie = LocatieWierden |
-proveensie = [[Oaveriessel]] |
-heufdplaats = '''Wierden''' |  
-kerne = [[Eanter]], [[Hoge Heksel]], [[Nötter]], [[Sunnoa]], [[Iepelo]] en [[Rectum]] |
-öppervlakte = 95,23 |
-öppervlakte laand = 94,68 |
-öppervlakte water = 0,56 |
-inwonners = 23.496 |
-doatum inwonners = 1 juli 2006 |
-dichtheid = 248 |
-breedtegroad = 52/21/0/N |
-lengtegroad = 6/35/0/E |
-verkeersoader = A1, N35, N347, N350; spoorlienn Zwolle-Almelo en Deaventer-Almelo |
-netnummer = 0546, 0547, 0548 |
-postkode = 7465-7469, 7640-7649 |
-webstie = [http://www.wierden.nl www.wierden.nl] |
+{{Gemeante
+| bestaandsnaam vlagge = VlaggeWierdn.gif
+| bestaandsnaam woapn = WoapnWierdn.gif
+| naam = Wierdn
+| lokatie = LocatieWierden
+| proveensie = [[Oaveriessel]]
+| heufdplaats = '''Wierdn'''
+| kerne = [[Eanter]], [[Hoge Heksel]], [[Nötter (Wierdn)|Nötter]], [[Sunnoa]], [[Iepelo]] en [[Rektum (Wierdn)|Rektum]]
+| öppervlakte = 95,23
+| öppervlakte laand = 94,68
+| öppervlakte water = 0,56
+| inwonners = 23.496
+| doatum inwonners = 1 juli 2006
+| dichtheid = 248
+| breedtegroad = 52/21//N
+| lengtegroad = 6/35//E
+| verkeersoader = A1, N35, N347, N350; spoorlienn Zwolle-Almelo en Deaventer-Almelo
+| netnummer = 0546, 0547, 0548
+| postkode = 7465-7469, 7640-7649
+| webstie = [http://www.wierden.nl www.wierden.nl]
 }}
 '''Wierdn''' ([[Nederlaands]]: ''Wierden'') is ne [[Tweante|Tweantse]] gemeente in de [[Nederlaand]]se proveensie [[Oaveriessel]]. De gemeante lig westelik van [[Almelo]], hef ne öppervlakte van 95,23 veerkaante kilometer en har op n eerstn januari [[2006]] 23.553 inwonners. Nöast Wierdn zölf heurn ok [[Eanter]], [[Hoge Heksel]], [[Iepelo]], [[Nötter (Wierdn)|Nötter]], [[Rektum]] en [[Sunnoa]] töt de gemeente.
 
-De noam Wierdn zol niks met [[Wierde]] van doon hebn, mer ofstamn van ''Wederden'', wat ''bevloeid stuk groond nöast nen rivier'' beteeknt. In de [[Middeleeuwn]] zol dreekwart van de grond tusken Eanter en Wierdn oonder water hebn stoan.
+De noam Wierdn zol niks met [[Wierde (toponiem)|wierde]] (kunstmoatege heuvel) van doon hebn, mer ofstamn van ''Wederden'', wat ''bevloeid stuk groond nöast nen rivier'' beteeknt. In de [[Middeleeuwn]] zol dreekwart van de grond tusken Eanter en Wierdn oonder water hebn stoan.
 
 ==Eksterne verbeending==
 [http://www.wierden.nl/ Officiële webstie van de gemeante]
-
-:''Zee ok [[Wierde]]''
 
 {{Wierdn}}
 {{Oaveriessel}}
