[[wierde]] → [[wierde (toponiem)|wierde]] (dat is [[wierde (toponiem)]])

--- a/Waarfhoezen.mw
+++ b/Waarfhoezen.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Churchwarfhuizen.JPG|thumb|200px|Kluuskìrk van Waarfhoezen]]
 '''Waarfhoezen''' ([[Nederlaands]]: ''Warfhuizen'') is ain dörp ien noorden van [[Nederlaand]]se prevìnzie [[Grunnen]]. t Legt ien haile olle landstreek ien [[Marne]], tegenswoordeg ook noam van gemainte. 
 
-Waarfhoezen bestaait oet twij [[wierde]]n, ain grode woarop kìrk en aigenlieke dörpskern leggen en een lutjere dij Boerum nuimt wordt.
+Waarfhoezen bestaait oet twij [[wierde (toponiem)|wierde]]n, ain grode woarop kìrk en aigenlieke dörpskern leggen en een lutjere dij Boerum nuimt wordt.
 
 Vrouger was Waarfhoezen n redelek groot dörp mit verschainde winkels en krougen, moar deur leegloop van streek sunt begun van twintegste aiw telt t dörp anno 2004 nog moar 284 ienwoners.
 
@@ -14,7 +14,6 @@ Kiek bie [[Ons Laive Vrauw van Besloten Toen]]
 
 [[Kattegerie:Grunnegs artikel]]
 [[Kattegerie:Ploats in Grunnen]]
-
 
 [[de:Warfhuizen]]
 [[en:Warfhuizen]]
