[[Nötter]] → [[Nötter (Wierdn)|Nötter]] (dat is [[Nötter (Wierdn)]])

--- a/Liest_van_regionaole_feesten.mw
+++ b/Liest_van_regionaole_feesten.mw
@@ -33,7 +33,7 @@ Dit is n '''liest van regionaole feesten''' dei jaorlijks vierd worden in 't [[N
 * [[Boake]]braandn met [[Poasken]] duur heel [[Oaveriessel]]
 * [[Peenksterfeestn]] ([[Boarnebrook]]; Tweede [[Pinksteren|Peenksterdag]])
 * [[Eanterse Daage]] ([[Eanter]]; eens in de veer joar midln in t zommer)
-* [[Midzommerfeest]] ([[Nötter]]; op n lengstn dag van t joar)
+* [[Midzommerfeest]] ([[Nötter (Wierdn)|Nötter]]; op n lengstn dag van t joar)
 * [[Dauwpop]] ([[Healdern]]; met [[hemmelvoart]])
 * [[Wiezo]] ([[Wierdn]]se Zommerfeestn, dree daage in juni)
 * Zommerfeestn van [[Hengevealde]]
