[[Nötter]] → [[Nötter (Wierdn)|Nötter]] (dat is [[Nötter (Wierdn)]])

--- a/Eanters.mw
+++ b/Eanters.mw
@@ -1,4 +1,4 @@
-t '''Eanters''' is nen vörm van t [[Tweants-Groafskops]], wat esprökn wörd in [[Eanter]] en in meendere moate ook in umlignde [[noaberskop]]n, zoas [[Nötter]], [[Rektum (Wierdn)]] en t [[Iepeloo]].
+t '''Eanters''' is nen vörm van t [[Tweants-Groafskops]], wat esprökn wörd in [[Eanter]] en in meendere moate ook in umlignde [[noaberskop]]n, zoas [[Nötter (Wierdn)|Nötter]], [[Rektum (Wierdn)|Rektum]] en t [[Iepeloo]].
 
 Umdat Eantersen duur de boot enömn fier op ear doarp beent, en doarumme ook op eare sproake, wörd t Eanters oawer t algemeen nog duur t grötste gedeelte van de Eantersen esprökn. t Eanters wörd in umlignde plaatsn wal ''verdreaid'' enuumd, umdet t skaarp kleenkt, en nen "dreai" maakt woer at aandere soortn Tweants dat neet doot. Dit wörd duur de gelearde leu [[Westfaals]]e [[brekking (taal)|breking]] enuumd; ne ''-ee'' wörd oet esprökn as /{{IPA|ɪə}}/, ne ''-oo'' wörd /{{IPA|ɔə}}/, ne ''-eu'' wörd /{{IPA|ʏə}}/, ne ''-ea'' wörd /{{IPA|ɛʌ}}/ en ne ''oa'' wörd /{{IPA|ɑʌ}}/.
 
