[[Nötter]] → [[Nötter (Wierdn)|Nötter]] (dat is [[Nötter (Wierdn)]]); luttek spöl

--- a/Kedingen.mw
+++ b/Kedingen.mw
@@ -16,7 +16,7 @@ De stad [[Riessen]]
 *[[Ealsn]]
 *[[Eanter]]
 *[[Hoge Heksel|Hoge Hexel]]
-*[[Nötter (Wierdn)|Notter]] en [[Sunnoa]]
+*[[Nötter (Wierdn)|Nötter]] en [[Sunnoa]]
 *[[Rektum]]
 *[[Wierdn]]
 *[[Iepeloo]]
@@ -26,7 +26,7 @@ De stad [[Riessen]]
 *[[Karspel Goor]]
 *[[Harke]]
 *[[Maarkel]]
-*[[Stokkum (Hof van Tweante)]]
+*[[Stokkum (Hof van Tweante)|Stokkum]]
 |}
 
 ==Aodelike huze==
@@ -36,16 +36,16 @@ Kedingen har heel wat [[havezate]]s. In zowat elken [[noaberskop]] lea der wal e
 {|
 | width=50% |
 * [[Havezate Ealsen|Hoes te Ealsen]] in [[Ealsn]]
-*[[Eversbarg]] in [[Nötter]]
+*[[Eversbarg]] in [[Nötter (Wierdn)|Nötter]]
 *[[Grimbarg]] in Nötter
 *[[Heeckeren (havezate)|Heeckeren]] in [[Kerspel Goor]]
-*[[Kevelham]] in [[Kerspel Goor]]
+*[[Kevelham]] in Kerspel Goor
 *[[Oldenhof]] in [[Maarkel]]
 | valign=top |
-*[[Oliedam]] in [[Kerspel Goor]]
+*[[Oliedam]] in Kerspel Goor
 *[[Stoevelaar]] in [[Harke]]
-*[[Wegdam (havezate)|Wegdam]] in [[Kerspel Goor]]
-*[[Weldam]] in [[Kerspel Goor]]
+*[[Wegdam (havezate)|Wegdam]] in Kerspel Goor
+*[[Weldam]] in Kerspel Goor
 *[[Westerflier]] in [[Stokkum (Hof van Tweante)|Stokkum]]
 |}
 
