[[Nötter]] → [[Nötter (Wierdn)|Nötter]] (dat is [[Nötter (Wierdn)]])

--- a/Heksel.mw
+++ b/Heksel.mw
@@ -1,11 +1,9 @@
 ''Bedooldn iej [[Hoge Heksel]]?
 
-'''Heksel''' of '''Hexel''' is ne [[boerskop]] in de gemeente [[Healdern]] in de [[Neerlaand]]se proveensie [[Oaweriessel]]. t Ligt kort bie [[Nijverdal]]. Heksel heurt met [[Nötter]], [[Sunnoa]] en Noessel töt de oolde boerskopn tusken [[Riessen]] en Nijverdal. Van vroger oet heurdn Heksel bie de boerskop Noessel, wat non ne wieke is van Nijverdal.
-
+'''Heksel''' of '''Hexel''' is ne [[boerskop]] in de gemeente [[Healdern]] in de [[Neerlaand]]se proveensie [[Oaweriessel]]. t Ligt kort bie [[Nijverdal]]. Heksel heurt met [[Nötter (Wierdn)|Nötter]], [[Sunnoa]] en Noessel töt de oolde boerskopn tusken [[Riessen]] en Nijverdal. Van vroger oet heurdn Heksel bie de boerskop Noessel, wat non ne wieke is van Nijverdal.
 
 ==Geskiedenisse==
 Heksel ligt oonderan de [[Sallaandse Heuwelrugge]]. Wonnear at dr de earste leu kömn te wonn is nit bekeand. De groond is froai skroa umdet n stuwwal nit völle [[leem|keileem]] inhef. Vuur de meanske oet de prehistorie was hier nit völle te haaln, en dr zeent ook weainig spoers van bewonning oet dee tied eveundn. De Esgroondn zeent later pas vruchtber emaakt met onmeundig völle plagnmest.
-
 
 ==Anhaling==
 <poem>''Achter op het Hexel, woar de boerderiejen verkroepertje spölt'',
