[[eek]] → [[eek (boom)|eek]] (dat is [[eek (boom)]])

--- a/Brummel.mw
+++ b/Brummel.mw
@@ -1,12 +1,12 @@
-[[Ofbeelding:Blackberries on bush.jpg|thumb|250px|Brummels]]
-[[Ofbeelding:Blackberry_with_fruits.jpg|thumb|250px|right|Brummel mit riepe brummels]]
+[[Ofbeelding:Blackberries on bush.jpg|thumb|Brummels]]
+[[Ofbeelding:Blackberry_with_fruits.jpg|thumb|right|Brummel mit riepe brummels]]
 '''Brummel''' is de naam van 't [[geslach (biologie)|plaantengeslach]] mit de wetenschappelijke en [[Latien]]se naam ''Rubus''. 't Is oek de naam van de vruchen van een paor belangrieke vertegenwoordigers van dit geslach. De 'cultuurbrummel' is ontstaon uut kruzingen van verschillende brummelsoorten, waodeur der gien soortnaam an-egeven kan wonnen. Meestentieds wonnen de rassen van de cultuurbrummel daorumme onder 't geslach ''Rubus'' en de sectie ''Moriferi'' erangschik.
 
 ==Bleui==
 De bleui van de brummel is vanof 't einde van [[mei]] tot [[september]] en de bestuving vient plaose deur [[insektn|insekken]], veural deur [[iemn|biejen]] en hommels. Der bin vruchen vanof [[augustus]].
 
 ==Ekelogische weerde==
-De brummel is deur zien stekels aorig goed bescharmp tegen dieren dee de vruchen op willen opeten. As e an-esleugen is, nimp de brummel meer en meer ruumte in beslag. Dit biejt dan oek de gelegenheid an bomen zoas de [[eek]] um groot te wonnen.
+De brummel is deur zien stekels aorig goed bescharmp tegen dieren dee de vruchen op willen opeten. As e an-esleugen is, nimp de brummel meer en meer ruumte in beslag. Dit biejt dan oek de gelegenheid an bomen zoas de [[eek (boom)|eek]] um groot te wonnen.
 
 ===Onkruud===
 De brummel is overal in de wereld eïntroduceerd. Mit name in [[Zuud-Afrika]] wonnen disse ''exoot'' ezien as een [[onkruud|ruudsoorte]]. Oek in [[Nederlaand]] wonnen e soms as een ruudsoorte ezien; as e de ruumte krig geet 't al gauw dronge op mekaar staon. Dit verschiensel wonnen oek wel "verbrummeling" eneumd.
