[[eek|]]| → [[eek (boom)|]]|

--- a/Gewone_addervere.mw
+++ b/Gewone_addervere.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Illustration Polypodium vulgare0.jpg|thumb|250px|Addervere]]
-De '''addervere''' ([[Latien]]: ''Polypodium vulgare'') is een [[vaoren]] die in [[Nederlaand]] vrie algemien veurkomt, mit naeme in de dunen, in [[bos]]sen op zaandgronden, op muren en an de voet van [[eek|ekkelbomen]]. De schubbige, krupende [[wortelstok]] komt vaeke an de oppervlakte.
+De '''addervere''' ([[Latien]]: ''Polypodium vulgare'') is een [[vaoren]] die in [[Nederlaand]] vrie algemien veurkomt, mit naeme in de dunen, in [[bos]]sen op zaandgronden, op muren en an de voet van [[eek (boom)|ekkelbomen]]. De schubbige, krupende [[wortelstok]] komt vaeke an de oppervlakte.
 
 ==Blaeder==
 De blaeder kunnen tot 45 centimeter lange wodden. D'r bin tot 25 bladslippen, die meerstal stomp bin en onderan niet markber langer bin as bovenan.
