--- a/Limburg_mijn_Vaderland.mw
+++ b/Limburg_mijn_Vaderland.mw
@@ -2,7 +2,7 @@
 
 In de dagelijkse realiteit in Limburg rond 1900 speulde 't [[Nederlaands|Nederlaans]] gien rolle van betekenis. De tääl van 't openbaore leven was 't [[Limburgs]]. [[Krante|Kraanten]] verskenen in de [[19e eeuw|19e]] en tot in de [[20e eeuw]] (ok) in 't [[Duuts]], in sommige dielen van Limburg was [[Duuts]] de tääl in de kärke en 't onderwies, terwiel Mestricht in disse tied nog de hieltied nauw verbunnen was mit 't [[Frans]]tälige Loekse laand. 't Gedicht van Krekelberg werd dan ok bewust gebruukt um Limburg as een diel van Nederlaand te portretteren. Daorop duudt 't gebruuk van 't Nederlaans in pläse van 't Limburgs. Ok de uut 1939 daterende "on-Limburgse" anhankelijkeidsverklaoring an 't Oranjehuus wil Limburg naodrukkelijk as een diel van Nederlaand prissenteren.
 
-'t Bronsgruun iekenolt waorover Gerard Krekelberg dichtte, waren de (ondertussen verdwenen) [[eek|ieken]] rond 't [[kasteel|kesteel]] [[Borgitter]] in [[Kessenich]]. Dit kesteel leg op de raand van de Itterbeek op de grens mit de dörpskern van 't [[Nederlaand|Nederlaanse]] [[Neeritter]].
+'t Bronsgruun iekenolt waorover Gerard Krekelberg dichtte, waren de (ondertussen verdwenen) [[eek (boom)|ieken]] rond 't [[kasteel|kesteel]] [[Borgitter]] in [[Kessenich]]. Dit kesteel leg op de raand van de Itterbeek op de grens mit de dörpskern van 't [[Nederlaand|Nederlaanse]] [[Neeritter]].
 
 't Lied wördt tegensworig ezien as [[volkslied]] van zowel [[Limburg (Nederlaand)|Nederlaans-]] as [[Limburg (België)|Belgisch-Limburg]] al wördt 't leste couplet (netuurlijk ok in [[België]]) nooit ezungen. 't Leste couplet dateert werskienlijk uut 1939 en is deur dirigent Snackers van 't Ruurmons mannenkoor toe-evoegd. 
 
