[[eek|]]| → [[eek (boom)|]]|

--- a/Catharina_Elderink.mw
+++ b/Catharina_Elderink.mw
@@ -29,7 +29,7 @@ An de Marktstroate, tusken de Walstroate en de Oolde Moarkt in Eanske, steet nen
 
 "''Hier aan de Marktstraat 7 woonde en werkte de Enschedese schrijfster en dichteres in de streektaal Cato Elderink (1871-1941)''"
 
-In [[1983]] sleug de Keuninklike Begear 12.500 [[Tweantse Daalder]]s. Op de vuurkaante steund t Tweantse ros en op de achterkaante steund um nen kraans van [[eek|ekenbladen]] ne sprökke van Cato Elderink: "''Wat good is wast langzam (sic) as ekenbeume''"
+In [[1983]] sleug de Keuninklike Begear 12.500 [[Tweantse Daalder]]s. Op de vuurkaante steund t Tweantse ros en op de achterkaante steund um nen kraans van [[eek (boom)|ekenbladen]] ne sprökke van Cato Elderink: "''Wat good is wast langzam (sic) as ekenbeume''"
 
 ==Oetgoande verbeendige==
 *[http://www.wieiswieinoverijssel.nl/details2.asp?Id=23 Beskriewing van zin leawen op ''Wie is wie in Overijssel'']
