[[Utrechs]] → [[Utrechs-Alblasserwaards|Utrechs]] (dat is [[Utrechs-Alblasserwaards]])

--- a/Niekarks.mw
+++ b/Niekarks.mw
@@ -2,7 +2,7 @@
 't '''Niekarks''' is een [[West-Veluws]] en [[Nedersaksisch]] [[dialekt|dialect]] dat espreuken wort in de [[Gelderlaand|Gelderse]] gemeente [[Niekark]]. 't Niekarks is stark verwant an dialecten as 't [[Putters]] (veural 't dialect van [[Diermen]]), 't [[Barrevelds]], [[Armeloos]] en 't [[Harderwieks]]. 't Niekarks ku-j beschrieven as een Nedersaksisch dialect mar wel mit een bonk [[Nederfrankisch]]e invleujen.
 
 ==Kenmarken==
-A-j naor 't Nedersaksische taolgebied kieken zie-j dat 't Niekarks aorig zujelijk leit, de [[Utrechs]]e, [[Hollaans (dialekt)|Hollanse]] en [[Betuws]]e invleud is daor dan ok wat groter as in d' are dialecten. 
+A-j naor 't Nedersaksische taolgebied kieken zie-j dat 't Niekarks aorig zujelijk leit, de [[Utrechs-Alblasserwaards|Utrechs]]e, [[Hollaans (dialekt)|Hollanse]] en [[Betuws]]e invleud is daor dan ok wat groter as in d' are dialecten. 
 
 Taolkundig ezien leit 't Niekarks meer tegen 't Barrevelds en 't Putters an mar 't het ok wat weg van 't [[Bunsjoots|Bunschoots]], zo heur je in sommige gevallen in 't Niekarks ''-tsje'' as uutgang van verkleinwoorden in plaots van ''-tje{{small()|n}}'' zoas in de wat noordelijker elegen dialecten (vergeliek 't Bunschootse ''appeltsie'' mit 't Niekarkse ''appeltsje'' en 't noordelijkere ''appeltjen'') en 't woord ''ootje'' of ''ootjie'' dat alleen veurkomt in de umgeving van Niekark, Bunschoten en Putten. 
 
