--- a/Nunspeets.mw
+++ b/Nunspeets.mw
@@ -4,7 +4,7 @@
 ==Kenmarken==
 Een veurbeeld van zo'n Oost-Veluws kenmark is dat 't Nunspeets de -e in de van oorsprong vrouwelijke [[zelfstaandig naamwoord|zelfstaandige naamwoorden]] hef ehouwen, zo is bieveurbeeld ''kaas'', ''kies'' en ''kerk'' in 't Nunspeets ''keze'', ''kieze'' (of soms oek ''koeze'') en ''karke'' (dit is 'tzelfde as in 't [[Oost-Veluws]]) terwiel de woorden ''kees/keis'', ''kies'' en ''kaark/kark'' in 't zujelijke en middelste part West-Veluwse dialekgebied veurkoemen.
 
-In 't Nunspeets he-j oek vake da-j de [[t-deletie|t vortlaoten]] (mit een deftig woord ''t-deletie''), dit he-j oek in 't [[Limburgs]], 't [[Utrechts|Utrechs]] en wele aandere [[Veluws]]e dialekken. Een aander ampart kenmark van 't Nunspeets is de ''ee'' en de ''oo'' in antal woorden dee in 't [[Nederlaands|Nederlaans]] mit een ''ie'' of ''oe'' eschreven wönnen (bieveurbeeld: dreje, neet, ko en doon = drie, niet, koe en doen). Dit verschiensel kump in de meeste Oost- of West-Veluwse dialekken neet veur, mar bieveurbeeld wel in [[Doospiek]], [[Elburg]], [[Oldebroek]] en een paor aandere darpen in 't Oost-Veluwse dialekgebied, mar daor heur je meestentieds awweer vaker de t as in 't Nunspeets. 
+In 't Nunspeets he-j oek vake da-j de [[t-deletie|t vortlaoten]] (mit een deftig woord ''t-deletie''), dit he-j oek in 't [[Limburgs]], 't [[Utrechs-Alblasserwaards|Utrechs]] en wele aandere [[Veluws]]e dialekken. Een aander ampart kenmark van 't Nunspeets is de ''ee'' en de ''oo'' in antal woorden dee in 't [[Nederlaands|Nederlaans]] mit een ''ie'' of ''oe'' eschreven wönnen (bieveurbeeld: dreje, neet, ko en doon = drie, niet, koe en doen). Dit verschiensel kump in de meeste Oost- of West-Veluwse dialekken neet veur, mar bieveurbeeld wel in [[Doospiek]], [[Elburg]], [[Oldebroek]] en een paor aandere darpen in 't Oost-Veluwse dialekgebied, mar daor heur je meestentieds awweer vaker de t as in 't Nunspeets. 
 
 ==Soorten Nunspeets==
 Je hemmen ongeveer vuuf soorten Nunspeets:
