--- a/Veluwe.mw
+++ b/Veluwe.mw
@@ -1,9 +1,9 @@
-[[Ofbeelding:Veluwe_5.88540E_52.13388N.jpg|thumb|right|275px|Satellietfoto]]
-[[Ofbeelding:Veluwe-kaort.GIF|thumb|250px|Kaorte]]
+[[Ofbeelding:Veluwe_5.88540E_52.13388N.jpg|thumb|right|Satellietfoto]]
+[[Ofbeelding:Veluwe-kaort.GIF|thumb|Kaorte]]
 De '''Veluwe''' is een [[bos]]rieke regio in de [[Nederlaand|Nederlaonse]] previnsie [[Gelderlaand|Gelderlaond]] en een veurmaolig [[kwertier]] van 't [[hertogdom Gelre]]. 't Gebied grens ongeveer an de plekken [[Attem|Hattem]] - [[Apeldoorne]] - [[Dieren]] - [[Arnem]] - [[Wageningen]] - [[Ede]] - [[Barreveld (gemeente)|Barneveld]] en [[Harderwiek]].
 
 == Netuur ==
-De Veluwe stiet bekend um zien [[bos]]sen en 't grootste netuurgebied van [[West-Europa|Noordwest-Europa]], en is zwat 100.000 [[bunder]]s groot. In de bossen woenen veural [[haart|harten]], [[kniende|knienen]] en aondere wildsoorten. Bie [[Armelo]] giet al iewig lange 't verhaal van de [[witte wieven]] in de ronte (dat overigens ok in [[Tweante|Twente]] veurkump). Naos de bossen stiet de Veluwe ok bekend um der [[zaandverstuving|zaondverstuvingen]], zoas bie [[Kodek|Kootwiek]] en [[Hulshorst|Hulshors]]. De [[raove]] is hier mit succes opniej in-evoerd, der komen noe tientallen exemplaren veur.
+De Veluwe stiet bekend um zien [[bos]]sen en 't grootste netuurgebied van [[West-Europa|Noordwest-Europa]], en is zwat 100.000 [[bunder]]s groot. In de bossen woenen veural [[haart|harten]], [[kniende (dier)|knienen]] en aondere wildsoorten. Bie [[Armelo]] giet al iewig lange 't verhaal van de [[witte wieven]] in de ronte (dat overigens ok in [[Tweante|Twente]] veurkump). Naos de bossen stiet de Veluwe ok bekend um der [[zaandverstuving|zaondverstuvingen]], zoas bie [[Kodek|Kootwiek]] en [[Hulshorst|Hulshors]]. De [[raove]] is hier mit succes opniej in-evoerd, der komen noe tientallen exemplaren veur.
 
 == Cultuur ==
 In [[Apeldoorne]] stiet 't [[Peleis 't Loo]], waor [[Wilhelmina van Nederlaand|Wilhelmina]] een tied lange ewoend hef.
