[[kniende|]]| → [[kniende (dier)|]]|

--- a/Hondebloeme.mw
+++ b/Hondebloeme.mw
@@ -9,7 +9,7 @@ De hondebloeme kump van oorsprong veur in [[Afrika]], [[Azië]] en [[Europa (con
 == Gebruuk ==
 Hondebloeme wonnen oek wel egeten. De blaojen wonnen hierveur overdek mit zaand, waordeur ze verbleken. 't Wonnen dan molleslaod eneumd. Dit is 't jonge blad van de hondebloeme. Vrogger wönnen der 's [[leinte|lentes]] in mollebulten ezoch naor ebleken hondebloemen, hierdeur kreeg 't de naam molleslaod.
 
-Deur veredeling is een verbeteren, bladrieke molleslaod verkregen. Molleslaod wonnen op verschillende marken in [[Europa (continent)|Europa]] as malse veurjaorsgreunte an-ebeujen. In Nederlaand en België is 't neet ruum verkriegbaor. De blaojen wonnen oek wel egeten deur [[kniende|knienen]] en [[cavia|cavia's]].
+Deur veredeling is een verbeteren, bladrieke molleslaod verkregen. Molleslaod wonnen op verschillende marken in [[Europa (continent)|Europa]] as malse veurjaorsgreunte an-ebeujen. In Nederlaand en België is 't neet ruum verkriegbaor. De blaojen wonnen oek wel egeten deur [[kniende (dier)|knienen]] en [[cavia|cavia's]].
 
 == Micro-soorten ==
 In Nederlaand bin minsens 250 micro-soorten bekend. Een micro-soorte is een [[klonen|kloon]] of mengelmoes van klonen, dee morfelogisch onderscheidbaor bin van mekaar. Umdat der iezelig veule kruzingen tussen de micro-soorten veurkoemen, wonnen ze deur de ''[[Heukels' flora van Nederlaand]]'' neet meer as amparte micro-soorten ezien en bin de volgende secties en soorten van de hondebloeme samen-edaon:
