--- a/Limerick_(dichtvorm).mw
+++ b/Limerick_(dichtvorm).mw
@@ -1,6 +1,6 @@
 Nen '''Limerick''' is n gedicht van vief regels, woervan't de leste wöarde oet de zinnen op mekoar riemt in ne AABBA volgorde. De meeste limericks hooldt zik an n vast antal lettergrepe; zin 1, 2 en 5 hebt negen lettergrepe, zin 3 en 4 hebt der viewe. t [[Versritme]] is meesttieds [[anapest]] of [[amphybrache]]. t Kan wean det Limericks oet [[Ierlaand (laand)|Ierlaand]] komt, van de Maiguedichters oet t [[18e eeuw|18de joarhoonderd]], mer der beent gedichten oet [[Engelaand]] bekeand dee't eulder beent, en toch deezelfde dichtvorm hebt.
 
-De gedichten beent vake komies of vernemstig en klook bedoold, mangs op t skunnige of. In [[Neerlaand]] was lange [[Ab Normaal]], n skunnig roze [[knien]] (as haandpoppe) vuur tellevisie, den't skune bakken vertellen dee, en limericks zingen.
+De gedichten beent vake komies of vernemstig en klook bedoold, mangs op t skunnige of. In [[Neerlaand]] was lange [[Ab Normaal]], n skunnig roze [[kniende (dier)|knien]] (as haandpoppe) vuur tellevisie, den't skune bakken vertellen dee, en limericks zingen.
 
 [[Kattegerie: Tweants artikel]]
 [[Kattegerie: Dichtvorm]]
