[[moor]] → [[moor (meens)|moor]] (dat is [[moor (meens)]])

--- a/West-Veluws.mw
+++ b/West-Veluws.mw
@@ -212,7 +212,7 @@ Gao mit de muuspijl over de sterretjes hinne um de infermasie dee derbie heurt t
 |bedorven (eten)
 |-
 |vao(de)r en moe(de)r <span style="white-space:nowrap; cursor:help; color:#002bb8; font:normal 110% 'Comic Sans MS';" title="Kindertaal: poeta en taat">*</span>
-|[[vaor]] en [[moor]]
+|[[vaor]] en [[moor (meens)|moor]]
 |vader en moeder
 |-
 |schaal sjaal <span style="white-space:nowrap; cursor:help; color:#002bb8; font:normal 110% 'Comic Sans MS';" title="Een schaal um de nek">*</span>
