--- a/Vaor.mw
+++ b/Vaor.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:My Father.jpg|thumb|right|244px|Een [[Thailaand|Thaise]] vaor mit zien deerne]]
-Een '''vaor''' is de [[man]]nelijke ouwer van een [[kiend]]. 't Beeld van vaorschap is deur de jaoren hinne nogal wat veraanderd, vrogger was 't bieveurbeeld heel gewoon veur de vaors um neet mee te helpen mit de opvoeding van de kienders, dit wönnen vrogger ezien (en soms oek noen nog) as 't wark van de [[moor]] van 't kiend. Tegensworig wonnen dit ezien as ouwerwets, en helpen de vaors meestentieds oek wel mee mit de opvoeding. 
+Een '''vaor''' is de [[man]]nelijke ouwer van een [[kiend]]. 't Beeld van vaorschap is deur de jaoren hinne nogal wat veraanderd, vrogger was 't bieveurbeeld heel gewoon veur de vaors um neet mee te helpen mit de opvoeding van de kienders, dit wönnen vrogger ezien (en soms oek noen nog) as 't wark van de [[moor (meens)|moor]] van 't kiend. Tegensworig wonnen dit ezien as ouwerwets, en helpen de vaors meestentieds oek wel mee mit de opvoeding. 
 
 In [[religie|rillegieuze]] termen kan ''Vaor'' kan oek verwiezen naor [[God]] (de ''Vaor'', de [[Jezus Christus|Jonge]] en de [[Heilige Geest|Heilige Gees]]).
 
