[[moor]] → [[moor (toponiem)|moor]] (dat is [[moor (toponiem)]])

--- a/Grönnegse_toalwiezer.mw
+++ b/Grönnegse_toalwiezer.mw
@@ -119,7 +119,7 @@ Ien dizze seksie kin man zuiken op letter:
 |-
 |Mizze||miskraam
 |-
-|[[Moor]]||moeras
+|[[Moor (toponiem)|Moor]]||moeras
 |-
 |[[Mous]]||boerenkool
 |-
