[[moor|]]| → [[moor (meens)|]]|

--- a/Laom.mw
+++ b/Laom.mw
@@ -1,8 +1,8 @@
-[[Image:Lamb.jpg|thumb|250px|Ooi mit heur laom]]
-[[Image:Lambs.jpg|thumb|250px|Laom in de greide]]
+[[Image:Lamb.jpg|thumb|Ooi mit heur laom]]
+[[Image:Lambs.jpg|thumb|Laom in de greide]]
 Een '''laom''' is een jong [[schaop]]. Et verschienen van laomer in de [[greide]] is veur veul [[mense|meensken]] een teken dat et [[leinte|meitied]] is. 
 
-Een zoeglaom is een laom dat nog bi'j zien [[moor|mem]] drinkt. As de ooi niet genog [[melk]] het veur bi'jveurbeeld drie of vier laomer kunnen ze bi'jvoegd wodden deur middel van de flesse of de laombar.
+Een zoeglaom is een laom dat nog bi'j zien [[moor (meens)|mem]] drinkt. As de ooi niet genog [[melk]] het veur bi'jveurbeeld drie of vier laomer kunnen ze bi'jvoegd wodden deur middel van de flesse of de laombar.
 
 Laomsvleis is vleis van laomer die niet oolder bin as acht of negen maonden. Et is slim maeger vleis.
 
