--- a/Sunt-Anne.mw
+++ b/Sunt-Anne.mw
@@ -1,6 +1,6 @@
 '''Sunt Anneperochie''' ([[Bildts]]: ''Sint-Anne'') is as [[heufdplak]] et grootste dörp van de gemiente [[Et Bildt]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit omdebi'j 15 kilometer in et noord-westen van [[Liwwadden (stad)|Liwwadden]] en het omdebi'j 3.975 inwoners.
 
-De plak is nuumd naor de heilige [[Anne (heilige)|Anne]], de [[moor|mem]] van [[Maria]].
+De plak is nuumd naor de heilige [[Anne (heilige)|Anne]], de [[moor (meens)|mem]] van [[Maria]].
 
 Kenmarkend is et achthoekige [[karkgebouw]] - de Van Harenskarke - in et midden van et dörp, dat stamt uut [[1682]]. Op disse plak, in et karkgebouw van die tied, trouwde [[Rembrandt van Rijn]] in [[1634]] mit [[Saskia Van Uylenburgh]]. Aachter de karke staot de [[grafkapel]] van de femilie Van Haren. Et hekke in de deure naor de grafkelder is een geschink van de [[Sveden|Zweedse]] [[keuning]], [[Gustaaf Adolf]].
 
