[[moor|]]| → [[moor (meens)|]]|

--- a/Onbevlekte_Ontvangenis.mw
+++ b/Onbevlekte_Ontvangenis.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Bartolomé Esteban Perez Murillo 021.jpg|thumb|right|''Onbevlekt Ontvangenis van Maria'' deur [[Bartolomé Esteban Perez Murillo]] ]]
-De '''Onbevlekte Ontvangenis van Maria''' is 'n [[dogma]] van de [[Rooms-Katholieke Karke|Rooms-Kattelieke Karke]], dät stelt dät [[Maria]] geboren is zunder belast te wèèn deur de [[arfzunde]]. Ze zol biej heur ontvangenis (verwekking) in de skoot van heur [[moor|moer]] [[Anna]] 'ne onbevlekte [[ziel]] ekregen hebben. 
+De '''Onbevlekte Ontvangenis van Maria''' is 'n [[dogma]] van de [[Rooms-Katholieke Karke|Rooms-Kattelieke Karke]], dät stelt dät [[Maria]] geboren is zunder belast te wèèn deur de [[arfzunde]]. Ze zol biej heur ontvangenis (verwekking) in de skoot van heur [[moor (meens)|moer]] [[Anna]] 'ne onbevlekte [[ziel]] ekregen hebben. 
 
 't Dogma wördt op [[8 december]] [[1854]] of-ekondigd deur [[Paus Pius X]] in de apostolische constitutie ''Ineffabilis Deus''. 
 
