[[moor]] → [[moor (meens)|moor]] (dat is [[moor (meens)]])

--- a/Femilie_(verwanten).mw
+++ b/Femilie_(verwanten).mw
@@ -10,7 +10,7 @@ De meensen waor de nooms en meuies mee etrouwd bin, bin vormen van an-etrouwen f
 
 == Zie ok ==
 * [[Vaor]]
-* [[Moor]]
+* [[Moor (meens)|Moor]]
 * [[Kiend]]
 
 [[Kattegerie:West-Veluws artikel]]
